# wuwa-gacha-history

./: .gitignore  API.md  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  build.rs  card_pool_id.json  index.html  package.json
app/: Cargo.toml  build.rs
app/assets/: main.css  tailwind.css
app/src/: api.rs  main.rs  platform.rs  state.rs
app/src/components/: add_user_dialog.rs  bars_view.rs  cards_view.rs  content_area.rs  export_dialog.rs  fetch_form.rs  filter_panel.rs  labels.rs  main_layout.rs  mod.rs  pagination.rs  record_table.rs  sidebar.rs  summary_view.rs  welcome.rs
assets/: tailwind.css
assets/icons/: icon.icns
data/: resonator.csv
docs/superpowers/plans/: 2026-04-14-frontend-implementation.md  2026-04-18-add-user-flow.md
docs/superpowers/specs/: 2026-04-14-frontend-design.md  2026-04-16-add-user-flow-design.md
scripts/: README.md  fetch_wiki_art.py  main.py  pyproject.toml
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  log_reader.rs  main.rs
src-tauri/src/sniffer/: ca.rs  interceptor.rs  mod.rs  proxy.rs
src/app/: api.rs  assets_wiki.rs  mod.rs  platform.rs  state.rs
src/app/components/: add_user_dialog.rs  bars_view.rs  cards_view.rs  content_area.rs  export_dialog.rs  fetch_form.rs  filter_panel.rs  labels.rs  layout.rs  mod.rs  record_table.rs  sidebar.rs  summary_view.rs  welcome.rs
src/components/: AddUserDialog.tsx  BarsView.tsx  CardsView.tsx  ContentArea.tsx  ExportDialog.tsx  FetchForm.tsx  FilterPanel.tsx  Pagination.tsx  RecordTable.tsx  Sidebar.tsx  SummaryView.tsx  WelcomePage.tsx
src/core/: catalog.rs  db.rs  export.rs  log_reader.rs  stats.rs
src/core/client/: mod.rs  request.rs  utils.rs
src/core/sniffer/: proxy.rs
src/lib/: catalog.ts  commands.ts  stats.ts  types.ts
wuwa-gacha-history/: Cargo.toml
wuwa-gacha-history/src/: catalog.rs  db.rs  error.rs  export.rs  lib.rs  log_reader.rs  stats.rs  version.rs
wuwa-gacha-history/src/client/: mod.rs  request.rs  response.rs  utils.rs
wuwa-gacha-history/src/sniffer/: ca.rs  interceptor.rs  mod.rs
