[workspace]
members = ["src-tauri", "wuwa-gacha-history"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["tangxiangong <tangxiangong@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/tangxiangong/wuwa-gacha-history"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wuwa-gacha-history = { path = "wuwa-gacha-history" }
