[package]
name = "wuwa-gacha-history"
version = "0.1.0"
authors = ["tangxiangong <tangxiangong@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/tangxiangong/wuwa-gacha-history"

[features]
default = ["sniffer"]
sniffer = [
    "dep:hudsucker",
    "dep:rcgen",
    "dep:http-body-util",
    "dep:bytes",
    "dep:tracing",
    "dep:time",
    "dep:winreg",
    "dep:windows",
]

[dependencies]
bytes           = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dioxus = { version = "0.7", features = ["desktop"] }
directories = "6"
http-body-util  = { version = "0.1", optional = true }
hudsucker       = { version = "0.22", features = ["rcgen-ca", "rustls-client"], optional = true }
rcgen           = { version = "0.13", features = ["pem", "x509-parser"], optional = true }
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
rfd = "0.15"
rust_xlsxwriter = "0.93"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2"
time            = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "fs", "process"] }
tracing         = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Networking_WinInet", "Win32_Foundation"], optional = true }
winreg  = { version = "0.55", optional = true }

[dev-dependencies]
tempfile = "3"
