[package]
name = "wuwa-gacha-history-app"
description = "WuWa Gacha History — Dioxus 0.7 desktop app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "wuwa-gacha-history"
path = "src/main.rs"

[dependencies]
# Dioxus 0.7 with the `desktop` feature — wry-based webview.
dioxus = { version = "0.7", features = ["desktop"] }

rfd = "0.15"
directories = "6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

wuwa-gacha-history = { workspace = true }
