[package]
name = "wuwa_gacha_history_backend"
description = "WuWa Gacha History GUI Tauri Backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[lib]
name = "wuwa_gacha_history_backend"
crate-type = ["staticlib", "cdylib", "rlib"]
