[package]
name = "wuwa_gacha_history_backend"
description = "WuWa Gacha History GUI Tauri Backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"
tokio = { workspace = true, features = ["rt-multi-thread", "time", "sync", "macros", "fs", "process"] }
wuwa-gacha-history = { workspace = true }

hudsucker = { version = "0.22", features = ["rcgen-ca", "rustls-client"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
http-body-util = "0.1"
time = "0.3"
bytes = "1"
tracing = "0.1"
regex = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.61", features = ["Win32_Networking_WinInet", "Win32_Foundation"] }

[lib]
name = "wuwa_gacha_history_backend"
crate-type = ["staticlib", "cdylib", "rlib"]
