[package]
name = "wuwa-gacha-history"
description = "WuWa Gacha History Client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
jiff = { version = "0.2", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_repr = "0.1"
thiserror = "2"
toasty = { version = "0.4", features = ["sqlite", "jiff"] }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
