[package]
name = "wuwa-gacha-history"
description = "WuWa Gacha History Client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
rust_xlsxwriter = "0.93"
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros"] }
