[package]
name = "wuwa-gacha-history"
description = "WuWa Gacha History Client + MITM sniffer + log reader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = ["sniffer"]
sniffer = [
    "dep:hudsucker",
    "dep:rcgen",
    "dep:http-body-util",
    "dep:bytes",
    "dep:tracing",
    "dep:time",
]

[dependencies]
csv = "1"
chrono = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
rust_xlsxwriter = "0.93"
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { workspace = true }
regex = "1"

hudsucker       = { version = "0.22", features = ["rcgen-ca", "rustls-client"], optional = true }
rcgen           = { version = "0.13", features = ["pem", "x509-parser"], optional = true }
http-body-util  = { version = "0.1", optional = true }
bytes           = { version = "1", optional = true }
tracing         = { version = "0.1", optional = true }
time            = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
winreg  = { version = "0.55", optional = true }
windows = { version = "0.61", features = ["Win32_Networking_WinInet", "Win32_Foundation"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros"] }
